--- a/.github/workflows/booleaning-called.yaml
+++ b/.github/workflows/booleaning-called.yaml
@@ -4,9 +4,9 @@ on:
       STRING_INPUT:
         required: true
         type: string
-      NUMBER_INPUT:
-        required: true
-        type: number
+      # NUMBER_INPUT:
+      #   required: true
+      #   type: number
       # NUMBER_INPUT_AUTO:
       #   required: true
       #   type: number
@@ -31,16 +31,16 @@ jobs:
       - name: Echo
         env:
           STEP_STRING_INPUT: ${{inputs.STRING_INPUT}}
-          STEP_NUMBER_INPUT: ${{inputs.NUMBER_INPUT}}
-          STEP_NUMBER_INPUT_AUTO: ${{inputs.NUMBER_INPUT_AUTO}}
+          # STEP_NUMBER_INPUT: ${{inputs.NUMBER_INPUT}}
+          # STEP_NUMBER_INPUT_AUTO: ${{inputs.NUMBER_INPUT_AUTO}}
           STEP_BOOLEAN_INPUT: ${{inputs.BOOLEAN_INPUT}}
         run: |-
           echo "INPUT_STRING_INPUT: '${INPUT_STRING_INPUT}'"
-          echo "INPUT_NUMBER_INPUT: '${INPUT_NUMBER_INPUT}'"
-          echo "INPUT_NUMBER_INPUT_AUTO: '${INPUT_NUMBER_INPUT_AUTO}'"
+          # echo "INPUT_NUMBER_INPUT: '${INPUT_NUMBER_INPUT}'"
+          # echo "INPUT_NUMBER_INPUT_AUTO: '${INPUT_NUMBER_INPUT_AUTO}'"
           echo "INPUT_BOOLEAN_INPUT: '${INPUT_BOOLEAN_INPUT}'"
 
           echo "STEP_STRING_INPUT: '${STEP_STRING_INPUT}'"
-          echo "STEP_NUMBER_INPUT: '${STEP_NUMBER_INPUT}'"
-          echo "STEP_NUMBER_INPUT_AUTO: '${STEP_NUMBER_INPUT_AUTO}'"
+          # echo "STEP_NUMBER_INPUT: '${STEP_NUMBER_INPUT}'"
+          # echo "STEP_NUMBER_INPUT_AUTO: '${STEP_NUMBER_INPUT_AUTO}'"
           echo "STEP_BOOLEAN_INPUT: '${STEP_BOOLEAN_INPUT}'"
