--- a/.github/workflows/booleaning-caller.yaml
+++ b/.github/workflows/booleaning-caller.yaml
@@ -19,6 +19,6 @@ jobs:
     uses: ./.github/workflows/booleaning-called.yaml
     with:
       STRING_INPUT: ${{inputs.STRING_INPUT}}
-      # NUMBER_INPUT: ${{toJson(inputs.NUMBER_INPUT)}}
+      # NUMBER_INPUT: ${{toJSON(inputs.NUMBER_INPUT)}}
       # NUMBER_INPUT_AUTO: 10
       BOOLEAN_INPUT: ${{inputs.BOOLEAN_INPUT}}
