explicit empty string in caller

--- a/.github/workflows/booleaning-caller.yaml
+++ b/.github/workflows/booleaning-caller.yaml
@@ -5,6 +5,7 @@ on:
       STRING_INPUT:
         required: false
         type: string
+        default: ''
       # NUMBER_INPUT:
       #   required: true
       #   type: string
