--- a/.github/workflows/booleaning-called.yaml
+++ b/.github/workflows/booleaning-called.yaml
@@ -4,12 +4,6 @@ on:
       STRING_INPUT:
         required: true
         type: string
-      # NUMBER_INPUT:
-      #   required: true
-      #   type: number
-      # NUMBER_INPUT_AUTO:
-      #   required: true
-      #   type: number
       BOOLEAN_INPUT:
         required: true
         type: boolean
@@ -104,3 +98,8 @@ jobs:
           for input in "${multispace_input[@]}"; do
             echo "input: '${input}'"
           done
+      - name: YQ
+        env:
+          INPUTS: ${{toJSON(inputs)}}
+        run: |-
+          yq --prettyPrint <<<"${INPUTS}"
