betterer yq input output

--- a/.github/workflows/booleaning-called.yaml
+++ b/.github/workflows/booleaning-called.yaml
@@ -102,4 +102,7 @@ jobs:
         env:
           INPUTS: ${{toJSON(inputs)}}
         run: |-
-          yq --prettyPrint <<<"${INPUTS}"
+          cat <<HEREDOC >>"${GITHUB_STEP_SUMMARY}"
+          ### Inputs
+          $(yq --prettyPrint <<<"${INPUTS}")
+          HEREDOC
