--- a/.github/workflows/booleaning-called.yaml
+++ b/.github/workflows/booleaning-called.yaml
@@ -104,5 +104,7 @@ jobs:
         run: |-
           cat <<HEREDOC >>"${GITHUB_STEP_SUMMARY}"
           ### Inputs
+          \`\`\`yaml
           $(yq --prettyPrint <<<"${INPUTS}")
+          \`\`\`
           HEREDOC
