--- a/.github/workflows/log_obj.yaml
+++ b/.github/workflows/log_obj.yaml
@@ -18,19 +18,17 @@ jobs:
         if: always()
         continue-on-error: true
         run: |
-          jq '.' <<<'${{ toJson(github) }}'
+          jq --color-output '.' <<<'${{ toJson(github) }}'
       - name: Log Other Objects
         if: always()
         continue-on-error: true
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |-
           set +o errexit
-          jq '.' <<<'${{toJSON(env)}}'
-          jq '.' <<<'${{toJSON(vars)}}'
-          jq '.' <<<'${{toJSON(job)}}'
-          jq '.' <<<'${{toJSON(steps)}}'
-          jq '.' <<<'${{toJSON(runner)}}'
-          jq '.' <<<'${{toJSON(secrets)}}'
-          jq '.' <<<'${{toJSON(needs)}}'
-          jq '.' <<<'${{toJSON(inputs)}}'
+          jq --color-output '.' <<<'${{toJSON(env)}}'
+          jq --color-output '.' <<<'${{toJSON(vars)}}'
+          jq --color-output '.' <<<'${{toJSON(job)}}'
+          jq --color-output '.' <<<'${{toJSON(steps)}}'
+          jq --color-output '.' <<<'${{toJSON(runner)}}'
+          jq --color-output '.' <<<'${{toJSON(secrets)}}'
+          jq --color-output '.' <<<'${{toJSON(needs)}}'
+          jq --color-output '.' <<<'${{toJSON(inputs)}}'
