--- a/.github/workflows/checkout_scripts.yml
+++ b/.github/workflows/checkout_scripts.yml
@@ -1,4 +1,5 @@
 name: Standalone Scripts
+run-name: Standalone Scripts
 on:
   - workflow_call
   - workflow_dispatch
@@ -14,7 +15,6 @@ jobs:
       - name: Checkout shared scripts
         uses: actions/checkout@v4
         with:
-          repository: FireTail-io/github-workflows
           path: workflow_scripts
           sparse-checkout: |
             .github/workflows/scripts
@@ -23,4 +23,4 @@ jobs:
           ls -R
       - name: Run Script
         run: |-
-          bash .github/workflows/scripts/test.sh
+          bash workflow_scripts/.github/workflows/scripts/test.sh
