--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,5 +1,6 @@
 ---
 name: Pre-Commit
+run-name: Pre-Commit
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
