--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -10,19 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        a:
-          - 1
-          - 2
-          - 3
-        b:
-          - 4
-          - 5
-          - 6
+        top:
+          - key: key-1
+            value: value-1
+          - key: key-2
+            value: value-2
     steps:
       - name: Print
         env:
-          a: ${{matrix.a}}
-          b: ${{matrix.b}}
+          a: ${{matrix.top.key}}
+          b: ${{matrix.top.value}}
         run: |-
           echo "a: ${b}"
           echo "b: ${b}"
