--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -21,5 +21,5 @@ jobs:
           a: ${{matrix.top.key}}
           b: ${{matrix.top.value}}
         run: |-
-          echo "a: ${b}"
+          echo "a: ${a}"
           echo "b: ${b}"
