--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,8 @@ repos:
         # rulesets: https://semgrep.dev/explore
         # defaults ignores tests/
         # https://semgrep.dev/docs/ignoring-files-folders-code/#understanding-semgrep-defaults
+        stages:
+          - pre-push
         args:
           - --config=p/python
           - --config=p/default
